Tue Jun 22 19:03:03 2004                        Michael Jennings (mej)

Here's 1.7-2.  One minor fix which only involved the actual commit
message in the "cvs log."
----------------------------------------------------------------------
Tue Jun 22 19:07:13 2004                        Michael Jennings (mej)

Here's all the new SCM stuff.  Needs more thorough testing, but so far
it Works For Me(tm).  :-)
----------------------------------------------------------------------
Tue Jun 22 20:18:54 2004                        Michael Jennings (mej)

This may or may not fix buildtool.  Pkg.pm is still broken. :(
----------------------------------------------------------------------
Wed Jun 23 22:58:22 2004                        Michael Jennings (mej)

Additional fixes to finally eliminate RevCtl.pm altogether.
----------------------------------------------------------------------
Thu Jun 24 18:25:35 2004                        Michael Jennings (mej)

Fixed logic error with "mzput -x"
----------------------------------------------------------------------
Thu Jun 24 18:30:52 2004                        Michael Jennings (mej)

Another logic error. :(
----------------------------------------------------------------------
Thu Jun 24 19:29:24 2004                        Michael Jennings (mej)

Fixed CVS logins.
----------------------------------------------------------------------
Thu Jun 24 19:34:07 2004                        Michael Jennings (mej)

Update spec file with new release number.
Pray that this message goes to list.  ;-)

----------------------------------------------------------------------
Thu Jun 24 19:37:22 2004                        Michael Jennings (mej)

Testing commit e-mail....
----------------------------------------------------------------------
Mon Jun 28 12:56:50 2004                        Michael Jennings (mej)

Tag/branch/revision-related stuff should be working now.
----------------------------------------------------------------------